fixed lots of other problems in jdk 1.4, including incorrect sizing of some
of the configuration dialogs, some times when focus wouldn't follow back from
a deleted message, and....  some other stuff.  don't remember it all.

fixed SSL on jdk 1.4

----- branched for 1.1/2.0 release. -----

fixed a bug where part of the error message was getting shown twice.

made it so the INBOX is required for imap servers.  with luck this will work
around a problem in which the inbox sometimes doesn't show up for imap 
stores.

temporary files for attachments now have the attachment's extension.  

fixed a bug where the copy button on messages wasn't getting enabled.

made it so imap connections time out more quickly.

fixed the build information so that we now include the kunststoff files.

modified the toolbars and the images some.

added an easier interface for adding new folders.

fixed a bug where multipart/alternative messages with additional attachments
weren't getting parsed properly.

added a way to view emails either with full headers or as raw rfc822
streams.

added (limited) online help.

fixed a NPE that could happen if you tried to delete a message that was in
the process of getting deleted.

020918 release
--------------

removed a lot of unused image files.  this should make the download at least
a bit smaller.

fixed the AddressBookEditor so that newly created AddressBooks are 
editable.  you still have to hit 'apply' first to create the address book,
though.

made it so the outbox and sent folder are both properly configured when
you start up the first time.  otherwise, though, they still require a 
restart for changes to be made.  this fix only applies to the first time
you start.

added a default domain setting, so that if you enter in an email address 
without a domain, then the default domain is appended.  if no default domain
is set, then the domain of the user is appended.

fixed an error where incomplete matches to address book entries would return