@@ -32,6 +32,8 @@
 <tr><td>Redo</td><td>Alt-R</td><td>New Message Window</td></tr>
 <tr><td>Select All</td><td>Control-A</td><td>New Message Window</td></tr>
 <tr><td>Edit Properties</td><td>Control-E</td><td>Folder Node<br>Store Node</td></tr>
+<tr><td>Find</td><td>F3</td><td>Read Message Window</td></tr>
+<tr><td>Find Again</td><td>Control-F3</td><td>Read Message Window</td></tr>
 </table>
 
 <h2>Folder Commands</h2>
